--- a/main.ipynb
+++ b/main.ipynb
@@ -1,63 +1,53 @@
-{
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "cells": [
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1oM3wsyJhB8i",
-        "outputId": "d7acb547-07f1-4f75-e1bb-f7ddcc18370f"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a number -25\n",
-            "The number is Negative and Odd\n"
-          ]
-        }
-      ],
-      "source": [
-        "num = int(input(\"Enter a number \"))\n",
-        "if num > 0:\n",
-        "  if num % 2 == 0:\n",
-        "    print(\"The number is Positive and Even\")\n",
-        "  else:\n",
-        "    print(\"The number is Positive and Odd\")\n",
-        "elif num < 0:\n",
-        "  if num % 2 == 0:\n",
-        "    print(\"The number is Negative and Even\")\n",
-        "  else:\n",
-        "    print(\"The number is Negative and Odd\")\n",
-        "else:\n",
-        "  print(\"The number is Zero\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5oijqz91hYTS"
-      },
-      "execution_count": null,
-      "outputs": []
-    }
-  ]
-}
+import streamlit as st
+import re
+
+def app():
+    st.set_page_config(page_title="Simple Number Analyzer", layout="centered")
+    st.title("Smart Number Checker")
+    st.markdown("---")
+
+    nums = st.text_input(
+        "Enter a list of integers separated by commas:",
+        placeholder="e.g., 18, -5, 4, 0, -20",
+        key="num_input_field"
+    )
+
+    if st.button("Analyze Numbers", type="primary"):
+        
+        if not nums:
+            st.warning("Please enter at least one number before analyzing.")
+            return
+
+        st.subheader("Analysis Results:")
+        
+        # We need to split the string reliably first (simulating the split in the list comprehension)
+        raw_num_strings = [x.strip() for x in re.split(r',', nums) if x.strip()]
+
+        if not raw_num_strings:
+            st.error("No valid input found after splitting by comma.")
+            return
+            
+        # List Comprehension
+        num_list = [int(x) for x in raw_num_strings] 
+
+        # Main Loop 
+        for num in num_list:
+            # Use the original raw string for output formatting, if available
+            num_str = str(num) 
+
+            if num > 0:
+                if num % 2 == 0:
+                    st.markdown(f":green[**{num_str}**] is Positive and Even")
+                else:
+                    st.markdown(f":green[**{num_str}**] is Positive and Odd")
+            elif num < 0:
+                if num % 2 == 0:
+                    st.markdown(f":red[**{num_str}**] is Negative and Even")
+                else:
+                    st.markdown(f":red[**{num_str}**] is Negative and Odd")
+            else:
+                st.markdown(f":orange[**{num_str}**] is Zero")
+
+        st.markdown("---")
+if __name__ == '__main__':
+    app()
